--- a/source/_posts/2017-03-31-ss-week7.md
+++ b/source/_posts/2017-03-31-ss-week7.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: "ss-week7"
+title: "SS-week7"
 date: 2017-03-31 10:37:03 +0800
 comments: true
 categories: Service_Security
@@ -140,8 +140,34 @@ end
 
 ```
 
+---
 
+## Security Threats
 
+當然目前的服務很簡單，也有很多漏洞
+下面列了一些，之後我們都會一個一個來解決
 
+- Threat: Confidentiality
+	* Stored resources could be stolen if server is compromised
+	* Vulnerability: User resources are not being encrypted
+	* Vector: Attacker with access to server can read whole data store
 
+- Threat: Authorization, Authentication
+	* Information about resources is not private
+	* Vulnerability: App does not check if user is authorized to see resource
+	* Vector: Anyone can access any data by knowing its public URL
 
+- Threat: Integrity, Bug
+	* :id random key generator could produce collisions
+	* Vulnerability: random key generator produces same keys within given second
+	* Vector: send multiple POST '/resource' requests within same second
+
+- Threat: Integrity
+	* User could destroy earlier resources
+	* Vulnerability: app does not check if :id key is being sent along with POST request
+	* Vector: send :id along with POST request to see if app overwrite earlier resource
+
+- Threat: All dimensions
+	* Dependencies (gems) could have vulnerabilities
+	* Vulnerability: gems could allow attacks (denial of service, remote code execution, etc.)
+	* Vector: send a payload to a route that will likely invoke a particular dependency (gem)
