--- a/source/_posts/2017-01-06-jsuwp-4-43-4-45.md
+++ b/source/_posts/2017-01-06-jsuwp-4-43-4-45.md
@@ -35,7 +35,7 @@ syntax parse saw function keyword in the starting in a line, it expects that thi
   country : "Taiwan"
 }
 
-// error
+// expressions
 function (name){
   return "Hello " + name;
 }
