--- a/source/_posts/2017-04-19-ss-week1.md
+++ b/source/_posts/2017-04-19-ss-week1.md
@@ -3,7 +3,7 @@ layout: post
 title: "SS-week1"
 date: 2017-04-19 23:37:56 +0800
 comments: true
-categories:
+categories: Service_Security
 ---
 
 # Security and Service
